[package]
name = "tournie-tool"
version = "0.1.0"
description = "raspberry pi tool to help run melee tournaments"
authors = ["Alex <avtodaro@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
rppal = "0.22.1"
sysinfo = "0.36.0"
kiss_xml = "1.0.2"